--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,7 @@
+--- 
 abstract: Client interface to the fpscand(1) virus scanning daemon
-author: "\xC3\x86var Arnfj\xC3\xB6r\xC3\xB0 Bjarmason <avar@f-prot.com>"
+author: 
+  - "\xC3\x86var Arnfj\xC3\xB6r\xC3\xB0 Bjarmason <avar@f-prot.com>"
 build_requires: 
   Cwd: 0
   File::Spec::Functions: 0
@@ -7,8 +9,11 @@ build_requires:
   File::stat: 0
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.68
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: FProt-Client
 no_index: 
   directory: 
