--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,16 @@
---- 
-abstract: Client interface to the fpscand(1) virus scanning daemon
-author: 
-  - "\xC3\x86var Arnfj\xC3\xB6r\xC3\xB0 Bjarmason <avar@f-prot.com>"
-build_requires: 
-  Cwd: 0
-  File::Spec::Functions: 0
-  File::Temp: 0
-  File::stat: 0
-  Test::More: 0
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         FProt-Client
+version:      0.07
+version_from: Client.pm
+installdirs:  site
+requires:
+    Cwd:                           0
+    File::Spec::Functions:         0
+    File::stat:                    0
+    File::Temp:                    0
+    IO::Socket::INET:              0
+    Test::More:                    0
+
 distribution_type: module
-generated_by: Module::Install version 0.68
-license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
-name: FProt-Client
-no_index: 
-  directory: 
-    - inc
-    - t
-requires: 
-  IO::Socket::INET: 0
-tests: t/*.t
-version: 0.07
+generated_by: ExtUtils::MakeMaker version 6.17
